# rust-client

./: .env.example  .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  README.md  fmt_on_commit.sh
.github/workflows/: build.yml  test.yml
api_receiver/: Cargo.toml
api_receiver/src/: decryption.rs  hmac_verify.rs  lib.rs  model.rs  r_config.rs  r_protocol.rs  report_misuse.rs  routes.rs  schema.rs
api_receiver/src/routes/: mod.rs
api_sender/: Cargo.toml
api_sender/src/: lib.rs
api_sender/src/routes/: mod.rs
protocol/: Cargo.toml
protocol/src/: customer_registration.rs  encryption.rs  hmac_util.rs  lib.rs  model.rs
service/: Cargo.toml
service/src/: main.rs  service_info.rs
service/src/middleware/: mod.rs
util/src/: lib.rs
