[package]
name = "api_sender"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
util = { path = "../util" }
axum = { version = "0.7.5", features = [ "json", "query", "macros", "multipart" ] }
chrono = { version = "0.4.24", features = ["serde"] }
http = "1.0.0"
serde = "1.0"
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = "0.12.5"
hyper = "1.4.1"
hmac = "0.12.1"
sha1 = "0.10.6"
bytes = "1.7.0"
versa = { version="0.17.3", features=["client_sender"]}

[dev-dependencies]
axum-macros = "0.3.8"
pretty_assertions = "1.3.0"
