[package]
name = "protocol"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
bytes = "1.6.0"
hmac = "0.12.1"
json-canon = "0.1.3"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
sha1 = "0.10.6"
tracing = "0.1.37"
versa = "0.8.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
rusty-hook = "0.11.2"
