[package]
name = "rust-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_receiver = { path = "../api_receiver", optional = true }
api_sender = { path = "../api_sender", optional = true }
axum = { version = "0.8.1", features = [ "json" ] }
dotenv = "0.15.0"
http = "1.1.0"
hyper = "0.14.28"
serde = "1.0"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tower-layer = "0.3.2"
tower-request-id = "0.3.0"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
oauth2 = "4.4.2"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
rusty-hook = "0.11.2"

[features]
receiver = [ "api_receiver" ]
sender = [ "api_sender" ]
